--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/Teacher2Coder/react-portfolio#readme",
   "dependencies": {
+    "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
+    "node-mailjet": "^6.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1"
