--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -3,72 +3,108 @@
     "projectName": "GamerBud",
     "image": "/gamer-bud.png",
     "description": "This app allows gamers to find new friends to play various video games accross various platforms!",
+    "type": "Web Service",
+    "technologies": "MongoDB, Express, React, Node.js, RAWG API, Chakra UI",
     "repo": "https://github.com/Teacher2Coder/gamer-bud",
     "deployedPage": "",
-    "featured": true
+    "featured": true,
+    "deployed": true,
+    "url": "https://gamer-bud-fbdv.onrender.com"
   },
   {
     "projectName": "DMs & DMs",
     "image": "/dms.png",
     "description": "This app allows users to create and share ideas for characters, stories, rules and quests with other Dungeon Masters around the world!",
+    "technologies": "Handlebars, Node.js, Express, Lowdash, Sequelize, Bootstrap",
+    "type": "Web Service",
     "repo": "https://github.com/Teacher2Coder/dms-and-dms",
     "deployedPage": "",
-    "featured": true
+    "featured": true,
+    "deployed": true,
+    "url": "https://dms-and-dms.onrender.com"
   },
   {
     "projectName": "CMS Style Blog",
     "image": "/cms-blog.png",
     "description": "This application allows users to create, edit and delte their own blog posts while also reading other blog posts written by other users!",
+    "technologies": "MongoDB, Express, React, Node.js, Bulma",
+    "type": "Web Service",
     "repo": "https://github.com/Teacher2Coder/cms-blog",
-    "deployedPage": "",
-    "featured": false
+    "deployedPage": "Handlebars, Node.js, Express, Sequelize",
+    "featured": false,
+    "deployed": true,
+    "url": "https://cms-blog-spg4.onrender.com"
   },
   {
     "projectName": "Marvel Movie Database",
     "image": "/mcu.png",
     "description": "This app allows users to see information about the Marvel Movies, store their favorite movies in a list and watch trailers!",
+    "technologies": "YouTube API, OMDb API, Bulma",
+    "type": "Static Webpage",
     "repo": "https://github.com/Teacher2Coder/project-1",
     "deployedPage": "",
-    "featured": true
+    "featured": true,
+    "deployed": true,
+    "url": "https://teacher2coder.github.io/project-1/"
   },
   {
     "projectName": "E-Commerce API",
     "image": "/e-commerce.png",
     "description": "This app is the back end for a potential E-Commerce website, allowing a database to create, read, update and delete product information.",
+    "technologies": "Postgres, Sequelize, Express",
+    "type": "API",
     "repo": "https://github.com/Teacher2Coder/e-commerce",
     "deployedPage": "",
-    "featured": false
+    "featured": false,
+    "deployed": false,
+    "url": null
   },
   {
     "projectName": "SVG Logo Generator",
     "image": "/logo-gen.png",
     "description": "This app allows users to create simple logos in a .svg file by answering a few questions in the command line!",
+    "technologies": "Node.js, Inquirer, Jest",
+    "type": "CLI Tool",
     "repo": "https://github.com/Teacher2Coder/logo-generator",
     "deployedPage": "",
-    "featured": false
+    "featured": false,
+    "deployed": false,
+    "url": null
   },
   {
     "projectName": "Social Media API",
     "image": "/social-media-api.png",
     "description": "This app is the backend for a potential Social Media Website. It utilizes MongoDB and allows users to create, read, update and delete information!",
+    "type": "API",
+    "technologies": "Node.js, Express, Mongoose",
     "repo": "https://github.com/Teacher2Coder/social-media-api",
     "deployedPage": "",
-    "featured": false
+    "featured": false,
+    "deployed": false,
+    "url": null
   },
   {
     "projectName": "README.md Generator",
     "image": "/questions.png",
     "description": "This app allows a user to create a README.md file with relative ease by just answering a few questions in the command line!",
+    "technologies": "Inquirer",
+    "type": "CLI Tool",
     "repo": "https://github.com/Teacher2Coder/README-generator",
     "deployedPage": "",
-    "featured": false
+    "featured": false,
+    "deployed": false,
+    "url": null
   },
   {
     "projectName": "Weather Tracker",
     "image": "/weather.png",
     "description": "This app allows users to get weather data for any city that a user decides to search for from a third party API!",
+    "technologies": "Bootstrap, Open Weather API",
+    "type": "Static Webpage",
     "repo": "https://github.com/Teacher2Coder/weather-tracker",
     "deployedPage": "",
-    "featured": false
+    "featured": false,
+    "deployed": true,
+    "url": "https://teacher2coder.github.io/weather-tracker/"
   }
 ]
