--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "homepage": "https://github.com/Teacher2Coder/react-portfolio#readme",
   "dependencies": {
     "axios": "^1.7.9",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1"
   },
