slight tweek to project displays

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -4,7 +4,7 @@
     "image": "/gamer-bud.png",
     "description": "This app allows gamers to find new friends to play various video games accross various platforms!",
     "type": "Web Service",
-    "technologies": "MongoDB, Express, React, Node.js, RAWG API, Chakra UI",
+    "technologies": ["MongoDB", "Express", "React", "Node.js", "RAWG API", "Chakra UI"],
     "repo": "https://github.com/Teacher2Coder/gamer-bud",
     "deployedPage": "",
     "featured": true,
@@ -15,7 +15,7 @@
     "projectName": "DMs & DMs",
     "image": "/dms.png",
     "description": "This app allows users to create and share ideas for characters, stories, rules and quests with other Dungeon Masters around the world!",
-    "technologies": "Handlebars, Node.js, Express, Lowdash, Sequelize, Bootstrap",
+    "technologies": ["Handlebars", "Node.js", "Express", "Lowdash", "Sequelize", "Bootstrap"],
     "type": "Web Service",
     "repo": "https://github.com/Teacher2Coder/dms-and-dms",
     "deployedPage": "",
@@ -27,7 +27,7 @@
     "projectName": "CMS Style Blog",
     "image": "/cms-blog.png",
     "description": "This application allows users to create, edit and delte their own blog posts while also reading other blog posts written by other users!",
-    "technologies": "MongoDB, Express, React, Node.js, Bulma",
+    "technologies": ["Handlebars", "Node.js", "Express", "Sequelize"],
     "type": "Web Service",
     "repo": "https://github.com/Teacher2Coder/cms-blog",
     "deployedPage": "Handlebars, Node.js, Express, Sequelize",
@@ -39,7 +39,7 @@
     "projectName": "Marvel Movie Database",
     "image": "/mcu.png",
     "description": "This app allows users to see information about the Marvel Movies, store their favorite movies in a list and watch trailers!",
-    "technologies": "YouTube API, OMDb API, Bulma",
+    "technologies": ["YouTube API", "Bulma", "OMDb API"],
     "type": "Static Webpage",
     "repo": "https://github.com/Teacher2Coder/project-1",
     "deployedPage": "",
@@ -51,7 +51,7 @@
     "projectName": "E-Commerce API",
     "image": "/e-commerce.png",
     "description": "This app is the back end for a potential E-Commerce website, allowing a database to create, read, update and delete product information.",
-    "technologies": "Postgres, Sequelize, Express",
+    "technologies": ["Postgres", "Sequelize", "Express"],
     "type": "API",
     "repo": "https://github.com/Teacher2Coder/e-commerce",
     "deployedPage": "",
@@ -60,10 +60,22 @@
     "url": null
   },
   {
+    "projectName": "Note Taker",
+    "image": "/notes.png",
+    "description": "This app allows users to create, save and delete notes!",
+    "technologies": ["Express", "Jest"],
+    "type": "Web Servce",
+    "repo": "https://github.com/Teacher2Coder/note-taker",
+    "deployedPage": "",
+    "featured": false,
+    "deployed": true,
+    "url": "https://note-taker-58kq.onrender.com"
+  },
+  {
     "projectName": "SVG Logo Generator",
     "image": "/logo-gen.png",
     "description": "This app allows users to create simple logos in a .svg file by answering a few questions in the command line!",
-    "technologies": "Node.js, Inquirer, Jest",
+    "technologies": ["Node.js", "Inquirer", "Jest"],
     "type": "CLI Tool",
     "repo": "https://github.com/Teacher2Coder/logo-generator",
     "deployedPage": "",
@@ -76,7 +88,7 @@
     "image": "/social-media-api.png",
     "description": "This app is the backend for a potential Social Media Website. It utilizes MongoDB and allows users to create, read, update and delete information!",
     "type": "API",
-    "technologies": "Node.js, Express, Mongoose",
+    "technologies": ["Node.js", "Express", "Mongoose"],
     "repo": "https://github.com/Teacher2Coder/social-media-api",
     "deployedPage": "",
     "featured": false,
@@ -87,7 +99,7 @@
     "projectName": "README.md Generator",
     "image": "/questions.png",
     "description": "This app allows a user to create a README.md file with relative ease by just answering a few questions in the command line!",
-    "technologies": "Inquirer",
+    "technologies": ["Inquirer"],
     "type": "CLI Tool",
     "repo": "https://github.com/Teacher2Coder/README-generator",
     "deployedPage": "",
@@ -99,7 +111,7 @@
     "projectName": "Weather Tracker",
     "image": "/weather.png",
     "description": "This app allows users to get weather data for any city that a user decides to search for from a third party API!",
-    "technologies": "Bootstrap, Open Weather API",
+    "technologies": ["Bootstrap", "Open Weather API"],
     "type": "Static Webpage",
     "repo": "https://github.com/Teacher2Coder/weather-tracker",
     "deployedPage": "",
